# Bridger_Assembler

./: .gitignore  .travis.yml  AUTHORS  Bridger.pl  CMakeLists.txt  ChangeLog  LICENCE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.3  output.5  output.6  output.7  requests  traces.0  traces.1  traces.1t  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8t
include/windows/getopt_mb_uni_vc10_dll/: getopt_mb_uni_vc10_dll.vcxproj
include/windows/getopt_mb_uni_vc10_dll/Debug Lib/: getopt_mb_ansi_vc10_dll.lastbuildstate
m4/: aclocal.m4
perllib/: SAM_to_fasta.pl  cmd_process_forker.pl  csfastX_to_defastA.pl  csfastq_to_starndard_fastq.pl  fastQ_to_fastA.pl  fasta_to_deBruijn_graph.pl  gff3_file_to_cdna.pl  revcomp_fasta.pl  revcomp_reads.pl  run_RSEM_align_n_estimate.pl
perllib/KmerGraphLib/: KmerGraph.pm
perllib/modules/: Fastq_reader.pm  Gene_obj.pm
plugins/fastool/: kseq.h
sample_test/: clean.pl  run_Me.sh  run_Me_as_DS.sh  run_abundance_estimation.sh
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  assemble.cpp  assemble.h  common.cpp  common.h  compatibility_graph.cpp  compatibility_graph.h  get_reads_from_graph.cpp  get_reads_from_graph.h  kmerhash.cpp  kmerhash.h  loadreads.cpp  loadreads.h  matching_merge.cpp  matching_merge.h  path_search.cpp  path_search.h  reachability_bp_graph.cpp  reachability_bp_graph.h  splicing_graph.cpp  splicing_graph.h  transitive_closure.h  transitive_reduction.h  utility.cpp  utility.h
src/.deps/: Assemble-assemble.Po  Assemble-common.Po  Assemble-kmerhash.Po  Assemble-loadreads.Po  Assemble-splicing_graph.Po  Assemble-utility.Po  PathSearch-common.Po  PathSearch-compatibility_graph.Po  PathSearch-kmerhash.Po  PathSearch-loadreads.Po  PathSearch-matching_merge.Po  PathSearch-path_search.Po  PathSearch-reachability_bp_graph.Po  PathSearch-splicing_graph.Po  PathSearch-utility.Po  get_reads_from_graph-common.Po  get_reads_from_graph-compatibility_graph.Po  get_reads_from_graph-get_reads_from_graph.Po  get_reads_from_graph-kmerhash.Po  get_reads_from_graph-loadreads.Po  get_reads_from_graph-matching_merge.Po  get_reads_from_graph-reachability_bp_graph.Po  get_reads_from_graph-splicing_graph.Po  get_reads_from_graph-utility.Po
src/windows/: getopt.h
src/windows/getopt_mb_uni_vc10_dll/: getopt_mb_uni_vc10_dll.vcxproj  getopt_mb_uni_vc10_dll.vcxproj.filters
src/windows/getopt_mb_uni_vc10_dll/Debug Lib/: getopt_mb_ansi_vc10_dll.lastbuildstate  vc100.idb
